--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,4 +5,12 @@ edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
+[[bin]]
+name = "solve-waffle"
+path = "src/main.rs"
+
+[[bin]]
+name = "solve-swap"
+path = "src/swap_main.rs"
+
 [dependencies]
