--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,8 @@
 name = "solve-waffle"
 version = "0.1.0"
 edition = "2021"
+license = "GPL-3.0-or-later"
+description = "A solver for Waffle puzzles"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
