--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,4 +21,5 @@ path = "src/editor.rs"
 
 [dependencies]
 gettext-rs = "0.7.0"
+libc = "0.2.147"
 ncurses = { version = "5.101.0", features = ["wide"] }
