--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,11 +1,15 @@
 [package]
-name = "solve-waffle"
+name = "vaflo"
 version = "0.1.0"
 edition = "2021"
 license = "GPL-3.0-or-later"
-description = "A solver for Waffle puzzles"
+description = "A daily word game in Esperanto"
+repository = "https://github.com/bpeel/vaflo"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+
+[lib]
+crate-type = ["cdylib"]
 
 [[bin]]
 name = "solve-waffle"
@@ -19,8 +23,41 @@ path = "src/swap_main.rs"
 name = "editor"
 path = "src/editor.rs"
 
-[dependencies]
-gettext-rs = "0.7.0"
-libc = "0.2.147"
-ncurses = { version = "5.101.0", features = ["wide"] }
-rand = "0.8.5"
+[target."cfg(target_arch = \"wasm32\")".dependencies.wasm_bindgen]
+package = "wasm-bindgen"
+version = "0.2.87"
+
+[target."cfg(target_arch = \"wasm32\")".dependencies.web_sys]
+package = "web-sys"
+version = "0.3.64"
+features = [
+         "Element",
+         "Window",
+         "console",
+         "CssStyleDeclaration",
+         "Document",
+         "Response",
+         "HtmlElement",
+         "Text",
+]
+
+[target."cfg(target_arch = \"wasm32\")".dependencies.js_sys]
+package = "js-sys"
+version = "0.3.64"
+
+[target."cfg(target_arch = \"wasm32\")".dependencies.console_error_panic_hook]
+version = "0.1.7"
+
+[target."cfg(not(target_arch = \"wasm32\"))".dependencies.gettextrs]
+package = "gettext-rs"
+version = "0.7.0"
+
+[target."cfg(not(target_arch = \"wasm32\"))".dependencies.libc]
+version = "0.2.147"
+
+[target."cfg(not(target_arch = \"wasm32\"))".dependencies.ncurses]
+version = "5.101.0"
+features = ["wide"]
+
+[target."cfg(not(target_arch = \"wasm32\"))".dependencies.rand]
+version = "0.8.5"
