wasm_game: Handle dragging the letters

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -39,6 +39,10 @@ features = [
          "Response",
          "HtmlElement",
          "Text",
+         "MouseEvent",
+         "Event",
+         "EventTarget",
+         "DomRect",
 ]
 
 [target."cfg(target_arch = \"wasm32\")".dependencies.js_sys]
