wasm_game: Use pointer events instead of mouse events

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -40,6 +40,7 @@ features = [
          "HtmlElement",
          "Text",
          "MouseEvent",
+         "PointerEvent",
          "Event",
          "EventTarget",
          "DomRect",
