--- a/Cargo.toml
+++ b/Cargo.toml
@@ -44,6 +44,7 @@ features = [
          "Event",
          "EventTarget",
          "DomRect",
+         "Storage",
 ]
 
 [target."cfg(target_arch = \"wasm32\")".dependencies.js_sys]
