wasm_game: Use execCommand to set the clipboard text

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -36,8 +36,10 @@ features = [
          "console",
          "CssStyleDeclaration",
          "Document",
+         "HtmlDocument",
          "Response",
          "HtmlElement",
+         "HtmlTextAreaElement",
          "Text",
          "MouseEvent",
          "PointerEvent",
