Add a utility to batch check all of the puzzles

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,6 +23,10 @@ path = "src/swap_main.rs"
 name = "editor"
 path = "src/editor.rs"
 
+[[bin]]
+name = "check-puzzles"
+path = "src/check_puzzles.rs"
+
 [target."cfg(target_arch = \"wasm32\")".dependencies.wasm_bindgen]
 package = "wasm-bindgen"
 version = "0.2.87"
