wasm_game: Set no-cache when fetching puzzles.txt
That way it will always ask the server if there are new puzzles.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -51,6 +51,8 @@ features = [
          "EventTarget",
          "DomRect",
          "Storage",
+         "RequestInit",
+         "RequestCache",
 ]
 
 [target."cfg(target_arch = \"wasm32\")".dependencies.js_sys]
