Port the utility to make the dictionary from Pucxobot

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -35,6 +35,10 @@ path = "src/dump_words.rs"
 name = "dump-dictionary"
 path = "src/dump_dictionary.rs"
 
+[[bin]]
+name = "make-dictionary"
+path = "src/make_dictionary.rs"
+
 [target."cfg(target_arch = \"wasm32\")".dependencies.wasm_bindgen]
 package = "wasm-bindgen"
 version = "0.2.87"
