--- a/Cargo.toml
+++ b/Cargo.toml
@@ -39,6 +39,10 @@ path = "src/dump_dictionary.rs"
 name = "make-dictionary"
 path = "src/make_dictionary.rs"
 
+[[bin]]
+name = "make-shavian-dictionary"
+path = "src/make_shavian_dictionary.rs"
+
 [target."cfg(target_arch = \"wasm32\")".dependencies.wasm_bindgen]
 package = "wasm-bindgen"
 version = "0.2.87"
@@ -90,3 +94,10 @@ version = "0.8.5"
 
 [target."cfg(not(target_arch = \"wasm32\"))".dependencies.chrono]
 version = "0.4.31"
+
+[target."cfg(not(target_arch = \"wasm32\"))".dependencies.serde_json]
+version = "1.0.115"
+
+[target."cfg(not(target_arch = \"wasm32\"))".dependencies.serde]
+version = "1.0.197"
+features = ["derive"]
