--- a/Cargo.toml
+++ b/Cargo.toml
@@ -90,3 +90,7 @@ version = "0.8.5"
 
 [target."cfg(not(target_arch = \"wasm32\"))".dependencies.chrono]
 version = "0.4.31"
+
+[target."cfg(not(target_arch = \"wasm32\"))".dependencies.clap]
+version = "4.5.4"
+features = ["derive"]
